syntax = "proto3";

package main;

option go_package="./s_hello";


service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

service Authenticator {
  rpc Auth(TryAuthRequest) returns (Authenticated) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message TryAuthRequest {
  string name = 1;
}

message Authenticated {
  string token = 1;
  string name = 2;
}
